<resources>
    <string name="app_name">Weather</string>
    <string name="location_name">%1$s</string>
    <string name="temperature">%.0f°</string>
    <string name="feels_like">Feels like %.0f°</string>
    <string name="low">Low %.0f°</string>
    <string name="high">High %.0f°</string>
    <string name="humidity">Humidity %1$d%%</string>
    <string name="pressure">Pressure %1$d hPa</string>
    <string name="forecast">Forecast</string>
    <string name="temp">Temp: %.0f°</string>
    <string name="low_colon">Low: %.0f°</string>
    <string name="high_colon">High: %.0f°</string>
    <string name="sunset">Sunset: %1$s</string>
    <string name="sunrise">Sunrise: %1$s</string>
    <string name="zip_code">Zip Code</string>
    <string name="submit">submit</string>
    <string name="ok">ok</string>
    <string name="degree_symbol">°</string>
    <string name="location_error">Error fetching data for location data provided</string>
    <string name="get_location">Use Current Location</string>
    <string name="request_location_permission">Need to obtain location for local weather</string>
    <string name="turn_on_notifications">Turn On Notifications</string>
    <string name="turn_off_notifications">Turn Off Notifications</string>
    <string name="current_temperature">Current Temperature</string>
    <string name="starting_service">Starting Service</string>
    <string name="double_dash">--</string>
</resources>
