<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/location_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_name"
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="72sp"
        android:textColor="@color/black"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/location_name"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/temperature" />

    <ImageView
        android:id="@+id/condition_icon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:contentDescription="@null"
        android:scaleType="center"
        app:layout_constraintTop_toTopOf="@id/temperature"
        app:layout_constraintTop_toBottomOf="@id/temperature"
        app:layout_constraintStart_toEndOf="@id/temperature"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/sun" />

    <TextView
        android:id="@+id/feels_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feels_like"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/temperature"
        app:layout_constraintStart_toStartOf="@id/temperature"
        app:layout_constraintEnd_toEndOf="@id/temperature" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="24dp"
        android:text="@string/low"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/temperature"
        app:layout_constraintTop_toBottomOf="@id/feels_like" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:textColor="@color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>