<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CurrentConditionsFragment">

    <TextView
        android:id="@+id/location_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/location_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:text="@string/temperature"
        android:textColor="@color/black"
        android:textSize="72sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_name" />

    <ImageView
        android:id="@+id/condition_icon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:contentDescription="@null"
        android:scaleType="center"
        android:src="@drawable/sun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/temperature"
        app:layout_constraintTop_toBottomOf="@id/temperature"
        app:layout_constraintTop_toTopOf="@id/temperature" />

    <TextView
        android:id="@+id/feels_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feels_like"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/temperature"
        app:layout_constraintStart_toStartOf="@id/temperature"
        app:layout_constraintTop_toBottomOf="@id/temperature" />

    <TextView
        android:id="@+id/low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/low"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/temperature"
        app:layout_constraintTop_toBottomOf="@id/feels_like" />

    <TextView
        android:id="@+id/high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/temperature"
        app:layout_constraintTop_toBottomOf="@id/low" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/temperature"
        app:layout_constraintTop_toBottomOf="@id/high" />

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/temperature"
        app:layout_constraintTop_toBottomOf="@id/humidity" />

    <Button
        android:id="@+id/forecastButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/forecast"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/location_name"
        app:layout_constraintStart_toStartOf="@id/location_name"
        app:layout_constraintTop_toBottomOf="@id/pressure" />

</androidx.constraintlayout.widget.ConstraintLayout>
